# une-status

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  pages.yml  update.yml
data/: cte_state.json  data.json  state.json
data/daily/: 2022-08-01.json  2022-08-02.json  2022-08-03.json  2022-08-04.json  2022-08-05.json  2022-08-06.json  2022-08-07.json  2022-08-08.json  2022-08-09.json  2022-08-10.json  2022-08-11.json  2022-08-12.json  2022-08-13.json  2022-08-14.json  2022-08-15.json  2022-08-16.json  2022-08-17.json  2022-08-18.json  2022-08-19.json  2022-08-20.json  2022-08-21.json  2022-08-22.json  2022-08-23.json  2022-08-24.json  2022-08-25.json  2022-08-26.json  2022-08-27.json  2022-08-28.json  2022-08-29.json  2022-08-30.json  2022-08-31.json  2022-09-01.json  2022-09-02.json  2022-09-03.json  2022-09-04.json  2022-09-05.json  2022-09-06.json  2022-09-07.json  2022-09-08.json  2022-09-09.json  (+1414 more)
data/events/: 2026-05-11.jsonl  2026-05-12.jsonl  2026-05-13.jsonl  2026-05-14.jsonl  2026-05-15.jsonl  2026-05-16.jsonl  2026-05-17.jsonl  2026-05-18.jsonl  2026-05-19.jsonl
data/monthly/: 2022-08.json  2022-09.json  2022-10.json  2022-11.json  2022-12.json  2023-01.json  2023-02.json  2023-03.json  2023-04.json  2023-05.json  2023-06.json  2023-07.json  2023-08.json  2023-09.json  2023-10.json  (+33 more)
site/: app.js  history.html  index.html  style.css
tests/: test_aggregate.py  test_extract.py  test_sen_events.py
une_status/: __init__.py  aggregate.py  backfill.py  classify.py  extract.py  fetch.py  parse.py  prune.py  store.py  update.py
(+10 files in other folders)
