[project]
name = "une_status"
version = "0.1.0"
description = "Status board for Empresa Eléctrica de La Habana — public Telegram channel crawl + static dashboard"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[project.scripts]
une-status = "une_status.update:main"
une-backfill = "une_status.backfill:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["une_status"]

[tool.pytest.ini_options]
testpaths = ["tests"]
